数据库操作

--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -27,6 +27,7 @@
     <input type="text" ng-model="allDesc"/>
     <br><br>
     <button ng-click="saveInfos()">保存信息</button>
+    <div ng-show="InfoShow" style="color: red">保存成功成功!</div>
 </select>
 </div>
 <script src="lib/bower_components/angularjs/angular.min.js"></script>
