--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -16,7 +16,7 @@
     <hr>
 
     页面名称:&nbsp;&nbsp;
-    <select ng-model="currentPageId" ng-options="pageId.name for pageId in pageIds"></select><br>
+    <select ng-model="currentPageId" ng-options="pageId.pageName for pageId in pageIds"></select><br>
     业务类型:&nbsp;&nbsp;
     <select ng-model="currentBusinessId" ng-options="businessId.name for businessId in businessIds"></select>
     <br>
