--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -26,7 +26,7 @@
     描述:&nbsp;&nbsp;
     <input type="text" ng-model="allDesc"/>
     <br><br>
-    <button ng-click="saveInfos()">保存信息</button>
+    <button ng-click="saveClick()">保存信息</button>
     <div ng-show="InfoShow" style="color: red">保存成功成功!</div>
 </select>
 </div>
