--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -173,7 +173,7 @@
                                                             <td>{{page.description}}</td>
                                                             <td>{{page.type}}</td>
                                                             <td>
-                                                                <button class="btn btn-danger btn-minier" ng-click="delPage(page.id)"><i class="icon-remove"></i></button>
+                                                                <button class="btn btn-danger btn-minier" ng-click="delPage(page.pageId)"><i class="icon-remove"></i></button>
                                                             </td>
                                                         </tbody>
                                                     </table>
