--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -72,7 +72,7 @@
                                     <div class="row">
                                         <div class="col-xs-12">
                                             <div class="mine-border">
-                                                页面名称:&nbsp;&nbsp;<input type="text" ng-model="pageIdName"/>
+                                                页面名称:&nbsp;&nbsp;<input type="text" ng-model="pageIdName" placeholder="例如：超级返首页"/>
                                             </div>
                                             <div class="mine-border">
                                                 页面描述:&nbsp;&nbsp;<input type="text" ng-model="pageIdDesc"/>
@@ -109,7 +109,7 @@
                                     <div class="row">
                                         <div class="col-xs-12">
                                             <div class="mine-border">
-                                                模块名称:&nbsp;&nbsp;<input type="text" ng-model="indexIdName"/>
+                                                模块名称:&nbsp;&nbsp;<input type="text" ng-model="indexIdName" placeholder="例如：广告条"/>
                                             </div>
                                             <div class="mine-border">
                                                 模块描述:&nbsp;&nbsp;<input type="text" ng-model="allDesc"/>
