--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
 <html>
-<head lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="lib/ace/assets/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="lib/ace/assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="lib/ace/assets/css/ace.min.css"/>
