--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -157,7 +157,8 @@
                                             <div>
                                                 <span>部门:</span>
                                                 <select ng-model="currentBusinessId" ng-options="businessId.name for businessId in businessIds"></select>
-                                                <div style="text-align: right; display: inline"><button class="btn btn-minier btn-inverse" ng-click="viewPages()">查看现存Page</button></div>
+                                                <div style="text-align: right; display: inline"><button class="btn btn-minier btn-inverse" ng-click="viewPages()">查看</button></div>
+                                                <div style="text-align: right; display: inline"><button class="btn btn-minier btn-purple" ng-click="viewAllPages()">查看全部Page</button></div>
 
                                                 <div style="margin-top: 5px;" ng-show="pages">
                                                     <table class="table table-striped table-hover table-responsive">
@@ -166,6 +167,7 @@
                                                             <td>id</td>
                                                             <td>名称</td>
                                                             <td>描述</td>
+                                                            <td ng-show="p_department">部门</td>
                                                             <td>类型</td>
                                                             <td>匹配正则</td>
                                                             <td>操作</td>
@@ -175,6 +177,7 @@
                                                             <td>{{page.pageId}}</td>
                                                             <td>{{page.pageName}}</td>
                                                             <td>{{page.description}}</td>
+                                                            <td ng-show="p_department">{{page.department}}</td>
                                                             <td>{{page.type}}</td>
                                                             <td>{{page.urlReg}}</td>
                                                             <td>
@@ -207,7 +210,8 @@
                                             <select ng-model="currentBusinessId" ng-options="businessId.name for businessId in businessIds"></select>
                                             <span>页面：</span>
                                             <select ng-model="currentPageId" ng-options="pageId.pageName for pageId in pageIds"></select>
-                                            <button class="btn btn-minier btn-inverse" ng-click="viewModules()">查看现存Module</button>
+                                            <button class="btn btn-minier btn-inverse" ng-click="viewModules()">查看</button>
+                                            <button class="btn btn-minier btn-purple" ng-click="viewAllModules()">查看全部Module</button>
 
                                             <div style="margin-top: 5px;" ng-show="modules">
                                                 <table class="table table-striped table-hover table-responsive">
@@ -216,6 +220,8 @@
                                                         <td>id</td>
                                                         <td>名称</td>
                                                         <td>描述</td>
+                                                        <td ngshow="m_department">部门</td>
+                                                        <td ngshow="m_department">关联页面id</td>
                                                         <td>类型</td>
                                                         <td>操作</td>
                                                     </tr>
@@ -224,6 +230,8 @@
                                                         <td>{{module.id}}</td>
                                                         <td>{{module.indexName}}</td>
                                                         <td>{{module.description}}</td>
+                                                        <td ngshow="m_department">{{module.department}}</td>
+                                                        <td ngshow="m_department">{{module.pageId}}</td>
                                                         <td>{{module.type}}</td>
                                                         <td>
                                                             <button class="btn btn-danger btn-minier" ng-click="delModule(module.id)"><i class="icon-remove"></i></button>
