--- a/src/main/webapp/content/index.html
+++ b/src/main/webapp/content/index.html
@@ -121,6 +121,9 @@
                                                 关联页面:&nbsp;&nbsp;<select ng-model="currentPageId" ng-options="pageId.pageName for pageId in pageIds"></select>
                                             </div>
                                             <div class="mine-border">
+                                                行为类型:&nbsp;&nbsp;<select ng-model="currentAction" ng-options="action.name for action in actions"></select>
+                                            </div>
+                                            <div class="mine-border">
                                                 类型:&nbsp;&nbsp;<select ng-model="currentTypeId" ng-options="typeId.name for typeId in typeIds"></select>
                                             </div>
                                             <div class="mine-border">
@@ -161,6 +164,7 @@
                                                 <div style="text-align: right; display: inline"><button class="btn btn-minier btn-purple" ng-click="viewAllPages()">查看全部Page</button></div>
 
                                                 <div style="margin-top: 5px;" ng-show="pages">
+                                                    <div style="overflow-x: auto; overflow-y: auto; height: 100%; width:100%;">
                                                     <table class="table table-striped table-hover table-responsive">
                                                         <thead>
                                                         <tr>
@@ -186,6 +190,7 @@
                                                             </td>
                                                         </tbody>
                                                     </table>
+                                                    </div>
                                                 </div>
 
                                             </div>
@@ -214,6 +219,7 @@
                                             <button class="btn btn-minier btn-purple" ng-click="viewAllModules()">查看全部Module</button>
 
                                             <div style="margin-top: 5px;" ng-show="modules">
+                                                <div style="overflow-x: auto; overflow-y: auto; height: 100%; width:100%;">
                                                 <table class="table table-striped table-hover table-responsive">
                                                     <thead>
                                                     <tr>
@@ -221,7 +227,7 @@
                                                         <td>名称</td>
                                                         <td>描述</td>
                                                         <td ngshow="m_department">部门</td>
-                                                        <td ngshow="m_department">关联页面id</td>
+                                                        <td ngshow="m_department">关联页面</td>
                                                         <td>类型</td>
                                                         <td>操作</td>
                                                     </tr>
@@ -231,7 +237,7 @@
                                                         <td>{{module.indexName}}</td>
                                                         <td>{{module.description}}</td>
                                                         <td ngshow="m_department">{{module.department}}</td>
-                                                        <td ngshow="m_department">{{module.pageId}}</td>
+                                                        <td ngshow="m_department">{{module.pageName}}</td>
                                                         <td>{{module.type}}</td>
                                                         <td>
                                                             <button class="btn btn-danger btn-minier" ng-click="delModule(module.id)"><i class="icon-remove"></i></button>
@@ -239,6 +245,7 @@
                                                         </td>
                                                     </tbody>
                                                 </table>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
